deploy/overlays/dev/route-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-app
spec:
  hostnames:
    - dev.hello-app.infrapad.local
    - hello-app.dev.apps.infrapad.ai
